# PVSO

./: .gitignore  .gitmodules  Hough.pptx  Presentation Notes.txt  README.md  calibration.py  camera_test.py  circle_detection.py  dump_pcd.py  exam3.py  exam4.py  hex.pcd  hough_transform.py  kanye.py  output.pcd  req.txt
pcl/color-based/: CMakeLists.txt  region.cpp  region_growing.cpp
pcl/conditional_euclid/: CMakeLists.txt  euclid.cpp
pcl/cylinder/: CMakeLists.txt  cylinder_segmentation.cpp  output.pcd
pcl/cylinder/first_segmentation/: cylinder.pcd  plane.pcd
pcl/cylinder/segmentation_good/: cylinder.pcd
pcl/euclidian/: euclid.cpp
pcl/merge/: CMakeLists.txt  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  merge.cpp
pcl/min-cut/: CMakeLists.txt  min_cut.cpp  min_cut_segmentation_tutorial_segmented.pcd
pcl/output/euclid/: euclid.cpp
pcl/smooting/: CMakeLists.txt  smothing.cpp
pointclouds/1/: output.pcd
pointclouds/2/: output.pcd
pointclouds/4/: output.pcd
pointclouds/5/: output.pcd
